--- a/day_04/stylesp6.css
+++ b/day_04/stylesp6.css
@@ -29,9 +29,9 @@
     padding-left: 24px;
   }
   .support-info-left img {
-    border-radius: 100px;
-    height: 100px;
-    width: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    
   }
   span {
     margin-left: 16px;
