--- a/New folder/project/css/main.css
+++ b/New folder/project/css/main.css
@@ -53,6 +53,23 @@ header a {
 }
 .cart {
   margin-right: 1rem;
+  cursor: pointer;
+  position: relative;
+}
+.cart-quantity {
+  position: absolute;
+  top: -8px;
+  right: -6px;
+  font-size: 0.75rem;
+
+  font-weight: 700;
+  background: #fff;
+  padding: 1px 4px;
+  border-radius: 28%;
+color: #000;
+  transition: linear 0.5s;
+  /* display: none; */
+  
 }
 .banner img {
   width: 100%;
@@ -78,18 +95,24 @@ header a {
   font-size: 1.125rem;
   line-height: 1.375rem;
   margin-bottom: 0.3rem;
+  
   text-align: center;
+  
 }
 .card-body {
+  display: flex;
+  flex-direction: column;
   padding-top: 0.625rem;
   padding-bottom: 0.3rem;
-  text-align: center;
+ 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding-left: 0.625rem;
   padding-right: 0.625rem;
-
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
-  position: relative;
+  
+ 
 }
 
 @media (min-width: 576px) {
@@ -108,19 +131,27 @@ header a {
   }
 }
 
-.price {
+.price249 {
+ 
+  height: 1.2rem;
+  
   font-weight: 700;
   font-size: 1.125rem;
   line-height: 1.375rem;
-
-  position: absolute;
+  
+  
   color: #c00a27;
   bottom: 5px;
   overflow: hidden;
-  margin-bottom: 0px;
-  vertical-align: middle;
-  left: 50%;
+  margin-right: 0px;
+  /* vertical-align: middle; */
+  /* left: 50%;
+  top:50%;
   transform: translateX(-50%);
+  transform: translateY(-50%); */
+}
+.VND{
+ margin-left: 5px;
 }
 .row-card {
   margin-top: 2.5rem;
@@ -479,7 +510,13 @@ p.footer-title {
   display: none;
   cursor: pointer;
 }
+@media (max-width:1200px){
+  .card-item{
+    margin-bottom: 40px;
+  }
+}
 @media (max-width: 768px) {
+  
   .menu-icon {
     display: inline-block;
     margin-left: 24px;
@@ -537,10 +574,12 @@ p.footer-title {
     
   }
 }
+
 /* popup */
-.product-popup.show1 {
+.product-popup {
   width: 500px;
-  min-height: 500px;
+  
+  /* height: 800px; */
   position: fixed;
   z-index: 15;
 
@@ -553,9 +592,12 @@ p.footer-title {
   border-radius: 8px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   display: none;
+  
 
   animation: popupShow ease 0.5s;
+  
 }
+
 
 .product-popup .btn-close {
   position: absolute;
@@ -575,31 +617,35 @@ p.footer-title {
 .popup-item {
   padding: 16px 0;
   border-bottom: 1px solid rgba(104, 44, 14, 0.3);
+  justify-content: center;
 }
 
-.popup-image img {
-  width: 100px;
-  height: 100px;
-  margin-right: 24px;
-}
+
 
 .popup-name {
   font-weight: 400;
-  font-size: 30px;
+  font-size: 26px;
   text-align: center;
 }
 
-.popup-price {
+.popup-price-2 {
+  display: flex;
   font-size: 30px;
   text-align: center;
   font-weight: 500;
   color: #B91D1D;
+  justify-content: center;
+}
+.popup-price-2 p{
+  margin-left: 5px;
 }
 
 .popup-image img {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  width: 100px;
+  height: 100px;
+  display: none;
+
 }
 
 .popup-title {
@@ -627,6 +673,7 @@ p.footer-title {
 }
 .popup-bottom .cart-item-button i {
   font-size: 36px;
+  cursor: pointer;
 }
 
 .popup-bottom .cart-item-quantity {
@@ -634,10 +681,12 @@ p.footer-title {
   margin: 0 12px;
 }
 
-.popup-bottom .btn {
+.popup-bottom .btnadd {
   margin-top: 16px;
   background-color: #B91D1D;
   color: white;
+  height: 40px;
+  width: 300px;
 }
 
 .form-check label {
@@ -651,10 +700,180 @@ p.footer-title {
   top: 0;
   height: 100vh;
   left: 0;
-  right: 0;
-
-  z-index: 12;
+  
+width: 100%;
+  z-index: 1;
   background-color: rgba(0, 0, 0, 0.8);
   display: none;
-  animation: fadeIn ease 0.35s;
+  overflow: hidden;
+}
+/* //card-site */
+.cart-side {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  bottom: 0;
+width: 380px;
+  max-width: 100%;
+  padding: 0 20px;
+  z-index: 15;
+  transform: translateX(100%);
+
+  background-color: #fff;
+  transition: ease 0.5s;
+  opacity: 0;
+}
+
+.cart-side-empty {
+  text-align: center;
+  padding: 16px 64px;
+  font-size: 24px;
+}
+
+.cart-side.open {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.cart-side .btn-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 19px 30px;
+  font-size: 16px;
+
+
+}
+
+.cart-side .btn-close:focus {
+  box-shadow: none;
+}
+
+.cart-side .title {
+  font-size: 16px;
+  
+  text-transform: uppercase;
+  padding: 16px 0;
+  border-bottom: 1px solid rgba(104, 44, 14, 0.3);
+  font-weight: 700;
+}
+
+.cart-side .content {
+  
+ 
+  min-width: 320px;
+}
+.cart-item-image {
+  width: 60px;
+  height: 64px;
+}
+.cart-item {
+  padding: 14px 0;
+}
+.cart-item-sub-price {
+  font-weight: 500;
+  font-size: 16px;
+  margin: 0 8px;
+}
+
+.cart-item-sub-price span {
+  min-width: 68px;
+  display: inline-block;
+  text-align: right;
+}
+.cart-item-info {
+  padding-left: 8px;
+}
+
+.cart-item-info .name {
+  white-space: nowrap;
+  font-size: 16px;
+  width: 140px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  
+  font-weight: 600;
+  
+}
+
+.cart-item-info .size {
+  
+  font-size: 14px;
+  opacity: 1;
+}
+
+.cart-item-info .size span {
+  font-size: 16px;
+  font-weight: 500;
+  margin: 0 4px;
+}
+
+.cart-item-info .size .edit i {
+  font-size: 16px;
+  opacity: 0.7;
+  color: var(--pri-4-color);
+  margin-left: 6px;
+  cursor: pointer;
+}
+
+.cart-item-info .note {
+  font-size: 13px;
+  font-weight: 300;
+  color: var(--primary-color);
+  width: 140px;
+}
+
+.cart-item-button i {
+  font-size: 24px;
+  margin: 0 8px;
+  color: var(--pri-3-color);
+  cursor: pointer;
+  text-shadow: 0px 2px 4px rgba(104, 44, 14, 0.3);
+}
+
+.cart-item-quantity {
+  font-size: 18px;
+  width: 12px;
+  text-align: center;
+  color: var(--pri-4-color);
+}
+
+.delete-product {
+  color: var(--pri-4-color);
+  font-size: 16px;
+  opacity: 0.7;
+  margin-left: 8px;
+
+  
+}
+.fa-trash-can{
+  cursor: pointer;
+}
+.cart-side-btn .btn {
+  font-size: 1rem;
+  margin-top:16px;
+  background-color: #c00a2d;
+  color: white;
+}
+
+.cart-side .sub-total {
+  border-top: 1px solid rgba(104, 44, 14, 0.3);
+  border-bottom: 1px solid rgba(104, 44, 14, 0.3);
+  padding: 24px 0;
+}
+
+.cart-side .sub-total {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.cart-side .sub-total span {
+  font-weight: 600;
+  font-size: 20px;
+  margin-left: 140px;
+  margin-right: 5px;
+}
+.content a {
+  margin-top: 16px;
 }
