--- a/project2/css/main.css
+++ b/project2/css/main.css
@@ -22,66 +22,20 @@ button {
 ul {
   list-style-type: none;
 }
-header {
-  background-color: #c00a2d;
-  height: 5rem;
-  color: #fff;
-}
-header a {
-  color: #fff;
-}
-.header-inner {
-  justify-content: space-between;
-  top: 0rem;
-  height: 5rem;
-}
-.logo {
-  padding-top: 0.3rem;
-  margin-left: 5rem;
-}
-.nav-list {
-  display: flex;
-}
-.nav-list li {
-  margin: 1.6rem;
-  text-transform: uppercase;
-  font-size: 20px;
-  font-weight: bold;
-}
-.login {
-  display: flex;
-  align-items: center;
-  margin-right: 4rem;
-}
-.cart {
-  margin-right: 1rem;
-  cursor: pointer;
-  position: relative;
-}
-.cart-quantity {
-  position: absolute;
-  top: -8px;
-  right: -6px;
-  font-size: 0.75rem;
 
-  font-weight: 700;
-  background: #fff;
-  padding: 1px 4px;
-  border-radius: 28%;
-color: #000;
-  transition: linear 0.5s;
-  /* display: none; */
-  
-}
 .banner img {
   width: 100%;
 
-  height: 50rem;
+  height: auto;
+
+  object-fit: cover;
 }
 .banner {
   padding-bottom: 5rem;
 }
+
 /* product-highlight */
+
 .h2-heading {
   text-align: center;
   font-weight: 400;
@@ -97,24 +51,21 @@ color: #000;
   font-size: 1.125rem;
   line-height: 1.375rem;
   margin-bottom: 0.3rem;
-  
+
   text-align: center;
-  
 }
 .card-body {
   display: flex;
   flex-direction: column;
   padding-top: 0.625rem;
   padding-bottom: 0.3rem;
- 
+
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding-left: 0.625rem;
   padding-right: 0.625rem;
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  
- 
 }
 
 @media (min-width: 576px) {
@@ -134,14 +85,12 @@ color: #000;
 }
 
 .price249 {
- 
   height: 1.2rem;
-  
+
   font-weight: 700;
   font-size: 1.125rem;
   line-height: 1.375rem;
-  
-  
+
   color: #c00a27;
   bottom: 5px;
   overflow: hidden;
@@ -152,20 +101,20 @@ color: #000;
   transform: translateX(-50%);
   transform: translateY(-50%); */
 }
-.VND{
- margin-left: 5px;
+.VND {
+  margin-left: 5px;
 }
 .row-card {
   margin-top: 2.5rem;
 }
 
 .read-more {
-  width: 13.5rem;
-  height: 2.7rem;
+  width: 15.625rem;
+  height: 3.125rem;
   background-color: #797979;
   border-radius: 9.4rem;
   text-align: center;
-  margin-top: 1.75rem;
+  margin-top: 40px;
 }
 .read-more p {
   font-weight: 700;
@@ -183,12 +132,13 @@ color: #000;
   background-color: #c00a2d;
   transition: 0.1s;
 }
-.card-item{
+.card-item {
+  
   cursor: pointer;
 }
-.card-item:hover img{
-  opacity: 0.5;
+.card-item:hover img {
 
+  transform: scale(1.1)
 }
 /* thuc don */
 .card-menu {
@@ -367,7 +317,7 @@ color: #000;
   font-weight: 700;
   font-size: 24px;
   line-height: 29px;
-
+  margin-top: 40px;
   color: #ffffff;
   text-align: center;
 }
@@ -402,7 +352,9 @@ color: #000;
   margin-bottom: 0px;
 }
 .item-bussiness-center {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .item-bussiness {
   display: flex;
@@ -428,6 +380,9 @@ color: #000;
 @media (max-width: 1200px) {
   .business {
     display: none;
+  }
+  .card-item {
+    margin-bottom: 40px;
   }
 }
 /* quality */
@@ -512,76 +467,345 @@ p.footer-title {
   display: none;
   cursor: pointer;
 }
-@media (max-width:1200px){
-  .card-item{
-    margin-bottom: 40px;
+/* header */
+header {
+  background-color: #c00a2d;
+  height: 5rem;
+  color: #fff;
+}
+.header-fix {
+  justify-content: space-between;
+  height: 80px;
+  align-items: center;
+}
+header a {
+  color: #fff;
+}
+/* .header-inner {
+  justify-content: space-between;
+  top: 0rem;
+  height: 5rem;
+} */
+.logo {
+  margin-left: 200px;
+}
+.logo img {
+  margin: 0px;
+  object-fit: cover;
+}
+.nav-list {
+  display: flex;
+  margin: 0px;
+  padding: 0px;
+}
+.nav-list li {
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
+  margin-right: 30px;
+}
+.login {
+  display: flex;
+  align-items: center;
+  margin-right: 200px;
+}
+.cart {
+  margin-right: 1rem;
+  cursor: pointer;
+  position: relative;
+}
+.cart img {
+  width: 40px;
+  height: 40px;
+}
+.user-icon img {
+  width: 40px;
+  height: 40px;
+}
+.cart-quantity {
+  position: absolute;
+  top: -8px;
+  right: -6px;
+  font-size: 0.75rem;
+
+  font-weight: 700;
+  background: #fff;
+  padding: 1px 4px;
+  border-radius: 28%;
+  color: #000;
+  transition: linear 0.5s;
+  /* display: none; */
+}
+@media (max-width: 1400px) {
+  .header-fix {
+    justify-content: space-between;
+    height: 80px;
+    align-items: center;
+  }
+  .nav-item {
+    height: 20px;
+  }
+  .li-trang-chu {
+    width: 126px;
+  }
+  .li-menu {
+    width: 60px;
+  }
+  .li-news {
+    width: 85px;
+  }
+  .li-baiviet {
+    width: 85px;
+  }
+  .li-contact {
+    width: 77px;
+  }
+  .logo {
+    margin-left: 100px;
+  }
+  .login {
+    margin-right: 100px;
+  }
+  .nav-list {
+    margin: 0px;
+    padding: 0px;
+  }
+  .cart img {
+    width: 40px;
+    height: 40px;
+  }
+  .user-icon img {
+    width: 40px;
+    height: 40px;
+  }
+  .card-body {
+    height: 118px;
+  }
+}
+@media (max-width: 1200px) {
+  .header-fix {
+    justify-content: space-between;
+    height: 80px;
+    align-items: center;
+  }
+  .nav-item {
+    height: 20px;
+  }
+  .li-trang-chu {
+    width: 126px;
+  }
+  .li-menu {
+    width: 60px;
+  }
+  .li-news {
+    width: 85px;
+  }
+  .li-baiviet {
+    width: 85px;
+  }
+  .li-contact {
+    width: 77px;
+  }
+  .logo {
+    margin-left: 20px;
+  }
+  .login {
+    margin-right: 20px;
+  }
+  .nav-list-1200 {
+    margin: 0px;
+    padding: 0px;
+  }
+  .cart img {
+    width: 40px;
+    height: 40px;
+  }
+  .user-icon img {
+    width: 40px;
+    height: 40px;
+  }
+  .card-body {
+    height: 100px;
+  }
+  .read-more {
+    margin-top: 28px;
+  }
+}
+@media (max-width: 992px) {
+  .header-fix {
+    justify-content: space-between;
+    height: 80px;
+    align-items: center;
+  }
+  .nav-item {
+    height: 16px;
+  }
+  .li-trang-chu {
+    width: 110px;
+  }
+  .li-menu {
+    width: 60px;
+  }
+  .li-news {
+    width: 76px;
+  }
+  .li-baiviet {
+    width: 77px;
+  }
+  .li-contact {
+    width: 69px;
+  }
+  .logo {
+    margin-left: 0px;
+  }
+  .login {
+    margin-right: 0px;
+  }
+  .nav-list li {
+    font-size: 18px;
+    margin: 0px;
+    margin-right: 20px;
+    padding: 0px;
+  }
+  .cart img {
+    width: 35px;
+    height: 35px;
+  }
+  .user-icon img {
+    width: 32px;
+    height: 32px;
   }
 }
 @media (max-width: 768px) {
-  
+  .header-fix {
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+  }
   .menu-icon {
     display: inline-block;
     margin-left: 24px;
-    width: 40px;
-    height: 40px;
-    margin-right: 0px;
+    width: 30px;
+    height: 30px;
+    margin-right: 150px;
   }
   .login {
-    margin-right: 52px;
+    margin: 0px;
+    margin-left: 150px;
   }
-  .cart img{
-    width: 40px;
-    height: 40px;
+  .cart img {
+    width: 30px;
+    height: 30px;
   }
-  .user-icon img{
-    width: 40px;
-    height: 40px;
+  .user-icon img {
+    width: 30px;
+    height: 30px;
   }
 
+  .logo {
+    margin: 0px;
+  }
+  .logo img {
+    margin: 0px;
+    padding: 0px;
+  }
   .header-inner {
     position: relative;
   }
-  .logo {
-    margin-left: 114px;
-    width: 65px;
-    height: 65px;
-    margin-right: 84px;
-  }
 
-  .nav-list {background-color: #a9001b;
+  .nav-list-768 {
+    background-color: #a9001b;
     position: absolute;
     top: 100%;
     left: 0;
     width: 100%;
-   flex-direction: column;
-   padding: 0px;
-   padding-left: 24px;
-   display: none;
-    
+    flex-direction: column;
+    padding: 0px;
+
+    display: none;
   }
-  .nav-list.show{
+
+  .nav-list.show {
     display: flex;
   }
- 
-  .nav-list li {
+
+  .nav-list-768 li {
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-    
+
     color: #ffffff;
-   
-    margin: 0px ;
+
+    margin: 0px;
     padding-bottom: 10px;
     padding-top: 10px;
-    
+    height: 35px;
+    margin-left: 24px;
+  }
+
+  .item {
+    margin-bottom: 30px;
+  }
+  .title-quality {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+  .card-body {
+    height: 90px;
+  }
+  .card-text {
+    font-size: 14px;
+  }
+  .price249 {
+    font-size: 16px;
+  }
+  .h2-heading {
+    font-size: 40px;
+  }
+  .card-menu-text h5 {
+    font-size: 28px;
+  }
+  .card-menu-text a {
+    font-size: 14px;
+  }
+  .read-more {
+    width: 192px;
+    height: 34px;
+  }
+  .read-more p {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+
+    color: #ffffff;
+  }
+  .btn-all-menu {
+    width: 192px;
+    height: 34px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+
+    color: #ffffff;
+  }
+  .btn-news-all {
+    width: 192px;
+    height: 34px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+
+    color: #ffffff;
   }
 }
 
 /* popup */
 .product-popup {
   width: 500px;
-  
-  /* height: 800px; */
+  min-height: 500px;
+
   position: fixed;
   z-index: 15;
 
@@ -594,12 +818,9 @@ p.footer-title {
   border-radius: 8px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   display: none;
-  
 
   animation: popupShow ease 0.5s;
-  
 }
-
 
 .product-popup .btn-close {
   position: absolute;
@@ -619,15 +840,16 @@ p.footer-title {
 .popup-item {
   padding: 16px 0;
   border-bottom: 1px solid rgba(104, 44, 14, 0.3);
-  justify-content: center;
+  justify-content: space-between;
 }
-
-
 
 .popup-name {
   font-weight: 400;
-  font-size: 26px;
+  font-size: 20px;
   text-align: center;
+  width: 320px;
+  margin-bottom: 10px;
+  margin-top: 25px;
 }
 
 .popup-price-2 {
@@ -635,19 +857,21 @@ p.footer-title {
   font-size: 30px;
   text-align: center;
   font-weight: 500;
-  color: #B91D1D;
+  color: #b91d1d;
   justify-content: center;
 }
-.popup-price-2 p{
+.popup-price-2 p {
   margin-left: 5px;
 }
-
-.popup-image img {
-  object-fit: cover;
+.popup-image {
   width: 100px;
-  height: 100px;
-  display: none;
+  height: auto;
+}
+.popup-image img {
+  /* object-fit: cover; */
 
+  height: 100px;
+  width: 100px;
 }
 
 .popup-title {
@@ -665,13 +889,15 @@ p.footer-title {
   font-size: 14px;
   padding: 4px 8px;
   outline: none;
-
+  width: 300px;
   border-radius: 4px;
-  border: 1px solid var(--pri-4-color);
+  border: 1px solid wheat;
   background: #eee;
 }
-.cart-item-button{
+.cart-item-button {
   margin-top: 12px;
+  position: absolute;
+  left: 1000%;
 }
 .popup-bottom .cart-item-button i {
   font-size: 36px;
@@ -684,8 +910,8 @@ p.footer-title {
 }
 
 .popup-bottom .btnadd {
-  margin-top: 16px;
-  background-color: #B91D1D;
+  margin-top: 36px;
+  background-color: #b91d1d;
   color: white;
   height: 40px;
   width: 300px;
@@ -695,15 +921,14 @@ p.footer-title {
   cursor: pointer;
 }
 
-
 /* overlay */
 .overlay {
   position: fixed;
   top: 0;
   height: 100vh;
   left: 0;
-  
-width: 100%;
+
+  width: 100%;
   z-index: 1;
   background-color: rgba(0, 0, 0, 0.8);
   display: none;
@@ -715,7 +940,7 @@ width: 100%;
   top: 0;
   right: -100%;
   bottom: 0;
-width: 380px;
+  width: 390px;
   max-width: 100%;
   padding: 0 20px;
   z-index: 15;
@@ -724,6 +949,7 @@ width: 380px;
   background-color: #fff;
   transition: ease 0.5s;
   opacity: 0;
+  overflow-y: scroll;
 }
 
 .cart-side-empty {
@@ -743,8 +969,6 @@ width: 380px;
   right: 0;
   padding: 19px 30px;
   font-size: 16px;
-
-
 }
 
 .cart-side .btn-close:focus {
@@ -753,7 +977,7 @@ width: 380px;
 
 .cart-side .title {
   font-size: 16px;
-  
+
   text-transform: uppercase;
   padding: 16px 0;
   border-bottom: 1px solid rgba(104, 44, 14, 0.3);
@@ -761,8 +985,6 @@ width: 380px;
 }
 
 .cart-side .content {
-  
- 
   min-width: 320px;
 }
 .cart-item-image {
@@ -794,13 +1016,10 @@ width: 380px;
   overflow: hidden;
   text-overflow: ellipsis;
 
-  
   font-weight: 600;
-  
 }
 
 .cart-item-info .size {
-  
   font-size: 14px;
   opacity: 1;
 }
@@ -838,23 +1057,21 @@ width: 380px;
   font-size: 18px;
   width: 12px;
   text-align: center;
-  color: var(--pri-4-color);
+ 
 }
 
 .delete-product {
-  color: var(--pri-4-color);
+  
   font-size: 16px;
   opacity: 0.7;
   margin-left: 8px;
-
-  
 }
-.fa-trash-can{
+.fa-trash-can {
   cursor: pointer;
 }
 .cart-side-btn .btn {
   font-size: 1rem;
-  margin-top:16px;
+  margin-top: 16px;
   background-color: #c00a2d;
   color: white;
 }
@@ -873,9 +1090,182 @@ width: 380px;
 .cart-side .sub-total span {
   font-weight: 600;
   font-size: 20px;
-  margin-left: 140px;
+  margin-left: 120px;
   margin-right: 5px;
+  
 }
+
 .content a {
   margin-top: 16px;
+}
+/* slide */
+.slidershow {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  
+  left: 50%;
+  transform: translateX(-50%);
+ 
+ 
+}
+.navigation{
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+ 
+
+  
+}
+.bar{
+  width: 20px;
+  height: 20px;
+  border: 2px solid #FFF;
+  border-radius: 30px;
+  margin-right: 20px;
+}
+.bar:hover{
+  background: #fff;
+  transition: 0.6s;
+  border: 2px solid red;
+}
+input[name="bottom"]{
+  position: absolute;
+  visibility: hidden;
+}
+.slides{
+  animation: animation 3s 5s infinite reverse;
+  width: 300%;
+  height: auto;
+  display: flex;
+  margin: 0px;
+}
+/* @keyframes animation{
+  0%{
+    transform: translateX(0);
+  }
+  33.33%{
+    transform: translateX(-33.33%);
+  }
+  66.66%{
+    transform: translateX(-66.66%);
+  }
+  100%{
+    transform: translateX(0);
+  }
+} */
+.slide{
+  position: relative;
+  width: 33.33%;
+  transition: 0.6s;
+  margin: 0px;
+}
+
+.text-news{
+  width: 100%;
+  
+  position: absolute;
+  color: #FFF;
+  font-size: 20px;
+  cursor: pointer;
+  top: 0px;
+  
+  background:linear-gradient(#000,rgba(0,0,0,0.0));
+
+}
+.text-news2{
+  width: 100%;
+  
+  position: absolute;
+  color: #FFF;
+  font-size: 20px;
+  cursor: pointer;
+  top: 0px;
+  
+  background:linear-gradient(#000,rgba(0,0,0,0.0));
+
+}
+.h5-slide2{
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.h5-1 {
+  margin-top: 10px;
+  margin-left: 20px;
+}
+.slide p {
+  margin-left: 20px;
+  font-size: 16px;
+  font-style: italic;
+}
+.slide img{
+  width: 100%;
+  height: 100%;
+}
+#bottom_1:checked ~ .s1{
+  margin-left: 0px;
+}
+#bottom_2:checked ~ .s1{
+  margin-left: -33.33%;
+}
+#bottom_3:checked ~ .s1{
+  margin-left: -66.66%;
+}
+.li-trang-chu:hover a{
+  color:yellow;
+}
+.li-menu:hover a{
+  color:yellow;
+}
+.li-news:hover a{
+  color:yellow;
+}
+.li-baiviet:hover a{
+  color:yellow;
+}
+.li-contact:hover a{
+  color:yellow;
+}
+.popup-delete{
+  top:25%;
+  position: absolute;
+  width: 320px;
+  height: 150px;
+  text-align: center;
+  border: 2px solid #b1154a;
+  display: none;
+  z-index: 1000;
+  background-color: #fff;
+}
+.popup-delete p{
+  margin-top: 20px;
+  font-weight: 400;
+font-size: 24px;
+line-height: 29px;
+text-align: center;
+
+color: #000000;
+margin-bottom: 40px;
+
+}
+.co{
+  width: 60px;
+  height: 32px;
+  background-color: #B9B9B9;
+  margin-right: 10px;
+  width: 50px;
+  border-radius: 30px;
+  color: #FFF;
+}
+.khong{
+  width: 60px;
+  height: 32px;
+  background-color: #B9B9B9;
+  margin-right: 10px;
+  width: 70px;
+  border-radius: 30px;
+  color: #FFF;
 }
